--- a/parent/nzg-rabbitmq/pom.xml
+++ b/parent/nzg-rabbitmq/pom.xml
@@ -13,5 +13,17 @@
     <artifactId>nzg-rabbitmq</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.fusesource.mqtt-client</groupId>
+            <artifactId>mqtt-client</artifactId>
+            <version>1.12</version>
+        </dependency>
 
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+    </dependencies>
 </project>
