--- a/parent/nzgweb/pom.xml
+++ b/parent/nzgweb/pom.xml
@@ -9,15 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ningzhengao</groupId>
-    <artifactId>nzg-kafka</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>nzgweb</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
-        </dependency>
-    </dependencies>
 
 </project>
