--- a/parent/nzg-springCloud/pom.xml
+++ b/parent/nzg-springCloud/pom.xml
@@ -2,20 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-    <parent>
-        <artifactId>parent</artifactId>
-        <groupId>com.ningzhengao</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-
+    <artifactId>nzg-springCloud</artifactId>
+    <groupId>com.ningzhengao</groupId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>eurekaServer</module>
         <module>eurekaClient</module>
-        <module>rabbonClient</module>
+        <module>feignClient</module>
     </modules>
 
     <properties>
@@ -47,6 +43,17 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
                 <version>${spring-cloud.version}</version>
+            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>org.springframework.cloud</groupId>-->
+                <!--<artifactId>spring-cloud-starter-eureka</artifactId>-->
+                <!--<version>1.3.5.RELEASE</version>-->
+            <!--</dependency>-->
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-feign</artifactId>
+                <version>1.4.6.RELEASE</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
